--- a/style.css
+++ b/style.css
@@ -31,9 +31,8 @@
     z-index: 1000;
   }
   h4{
-    position: absolute;
+    position: fixed;
     width: 250px;
-    height: 100px;
     padding: 10px;
     background-color: white;
     border-radius: 10px 10px 10px 0;
@@ -62,7 +61,7 @@
   .gunie{
     width: auto;
     height: 80%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
   }
   @media only screen and (max-width: 600px) {
@@ -70,7 +69,7 @@
       overflow: hidden;
     }
     .lamp{
-      position: absolute;
+      position: fixed;
       bottom: 0px;
       right: 20px;
     }
@@ -84,7 +83,7 @@
     .tresure{
       width: 500px;
       position: fixed;
-      bottom: -80px;
+      bottom: -30px;
       left: 80px;
     }
     .gunie{
